<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacles_rviz_plugin</name>
  <version>1.0.0</version>
  <description>obstacles rviz plugin.</description>
  <maintainer email="knb@artif.org">Kensei Nakamura</maintainer>
  <author>Mateusz Przybyla</author>
  <author>Kensei Nakamura</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libqt5-widgets</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>obstacle_detector_interfaces</depend>
  <!-- <depend>obstacle_detector</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
